# image-bmp

./: Cargo.toml  README.md
src/: decoder.rs  encoder.rs  lib.rs
tests/: reference_images.rs  truncate_images.rs
