[package]
name = "image-bmp"
version = "0.22.2"
license = "MIT"
description = "BMP encoding and decoding library written in pure Rust."
authors = [
    "ccgn",
    "bvssvni <bvssvni@gmail.com>",
    "nwin",
    "TyOverby <ty@pre-alpha.com>",
    "HeroicKatora",
    "Calum",
    "CensoredUsername <cens.username@gmail.com>",
    "fintelia <fintelia@gmail.com>"
]
readme = "README.md"
documentation = "https://docs.rs/image-bmp"
repository = "https://github.com/image-rs/image-bmp.git"
homepage = "https://github.com/image-rs/image-bmp"
categories = ["multimedia::images", "multimedia::encoding"]
exclude = [
    "src/png/testdata/*",
    "examples/*",
    "tests/*",
]
edition = "2018"

[lib]
name = "image_bmp"
path = "./src/lib.rs"

[dependencies]
byteorder = "1.2.1"
#num-iter = "0.1.32"
#num-rational = { version = "0.2.1", default-features = false }
#num-traits = "0.2.0"

